--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Pulselive Code Challenge</string>
+
+    <string name="default_error_message">Something went wrong! Please, try again later.</string>
 </resources>
